--- a/05-ms-marinebiology.qmd
+++ b/05-ms-marinebiology.qmd
@@ -164,7 +164,33 @@ Each spring, students participate in an annual progress review with a representa
 - Advisor evaluation and summary of committee meeting  
 - Teaching feedback (if applicable)
 
-Failure to complete required progress review materials may result in a registration hold.
+**Outcomes of the Review**
+
+Following the annual progress review, students will receive one of three designations:
+
+### 1. Meeting Expectations  
+The student is making satisfactory progress toward degree completion and professional development milestones. Any recommendations provided are intended to support continued growth and timely completion of the program.
+
+### 2. Making Progress with Concerns  
+The student is generally progressing toward degree completion but has one or more areas that require attention (e.g., research progress, coursework, communication, or professional development).  
+
+In this case:  
+- A brief written summary of concerns and recommendations will be provided.  
+- The student and advisor are expected to address these areas over the following semester.  
+- Additional formal review is not required unless concerns persist.
+
+### 3. Not Meeting Expectations  
+The student is not making sufficient progress toward degree milestones or professional development benchmarks.
+
+For students in this category, a **written improvement plan** will be developed collaboratively by the student, advisor, and the GPC. This plan will:  
+- Clearly identify areas of concern  
+- Define specific actions required for improvement  
+- Establish measurable milestones and timelines  
+
+Students designated as not meeting expectations will meet again with a GPC representative in **August** to evaluate progress toward the agreed-upon plan. Continued lack of progress may result in additional programmatic actions in accordance with graduate school and departmental policies. This structure is intended to promote transparency, consistency, and proactive support for student success while ensuring timely degree progress.
+
+
+
 
 ---
 
